<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAA"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:padding="@dimen/padding_form"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="Login"
                  android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

        <EditText android:id="@+id/emailEditText" android:layout_width="match_parent"
                  android:inputType="text"
                  android:maxLines="1"
                  android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

        <EditText android:id="@+id/passwordEditText" android:layout_width="match_parent"
                  android:inputType="textPassword"
                  android:layout_height="wrap_content"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:weightSum="2"
                      android:orientation="horizontal">

            <Button android:id="@+id/submitButton" android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit"/>
            <Button android:id="@+id/registerButton" android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>